--- a/03.API-EXAMPLE.md
+++ b/03.API-EXAMPLE.md
@@ -42,7 +42,7 @@ $ export PKG_CONFIG_PATH=$(pwd)/example_install/lib/pkgconfig/
 Test if the `pkg-config` works for JerryScript:
 
 ```sh
-$ pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-ext libjerry-libm
+$ pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-ext libjerry-math
 ```
 
 ## Example 1. Execute JavaScript from your application
@@ -68,7 +68,7 @@ main (void)
 To compile it one can use the following command:
 
 ```sh
-$ gcc api-example-1.c -o api-example-1 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-libm)
+$ gcc api-example-1.c -o api-example-1 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application returns with a zero exit code:
@@ -128,7 +128,7 @@ main (void)
 To compile it one can use the following command:
 
 ```sh
-$ gcc api-example-2.c -o api-example-2 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-libm)
+$ gcc api-example-2.c -o api-example-2 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application returns with a zero exit code:
@@ -191,7 +191,7 @@ main (void)
 To compile it one can use the following command:
 
 ```sh
-$ gcc api-example-3.c -o api-example-3 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-libm)
+$ gcc api-example-3.c -o api-example-3 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application returns with a zero exit code:
@@ -295,7 +295,7 @@ main (void)
 To compile it one can use the following command:
 
 ```sh
-$ gcc api-example-4.c -o api-example-4 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-libm)
+$ gcc api-example-4.c -o api-example-4 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application should print out the message present in the `print_handler` method:
@@ -415,7 +415,7 @@ main (void)
 To compile it one can use the following command:
 
 ```sh
-$ gcc api-example-5.c -o api-example-5 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-libm)
+$ gcc api-example-5.c -o api-example-5 $(pkg-config --cflags --libs libjerry-core libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application should print out the string passed for the `print` method in the JS code:
@@ -483,7 +483,7 @@ To compile it one can use the following command:
 (**Note** that the `libjerry-ext` was added **before** the `libjerry-port-default` entry for the `pkg-config` call.
 
 ```sh
-$ gcc api-example-6.c -o api-example-6 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-libm)
+$ gcc api-example-6.c -o api-example-6 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-math)
 ```
 
 If everything is correct the application should print out the string passed for the `print` method in the JS code:
@@ -559,7 +559,7 @@ To compile it one can use the following command:
 (**Note** that the `libjerry-ext` was added **before** the `libjerry-port-default` entry for the `pkg-config` call.
 
 ```sh
-$ gcc api-example-7.c -o api-example-7 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-libm)
+$ gcc api-example-7.c -o api-example-7 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-math)
 ```
 
 The sample will output 'Hello from C!'. However, now it is not just a part of the source script, but the value, dynamically supplied to the engine:
@@ -832,7 +832,7 @@ To compile it one can use the following command:
 (**Note** that the `libjerry-ext` was added **before** the `libjerry-port-default` entry for the `pkg-config` call.
 
 ```sh
-$ gcc api-example-8-shell.c -o api-example-8-shell $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-libm)
+$ gcc api-example-8-shell.c -o api-example-8-shell $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-math)
 ```
 
 The application reads lines from standard input and evaluates them, one after another. To try out run:
@@ -932,7 +932,7 @@ To compile it one can use the following command:
 (**Note** that the `libjerry-ext` was added **before** the `libjerry-port-default` entry for the `pkg-config` call.
 
 ```sh
-$ gcc api-example-9.c -o api-example-9 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-libm)
+$ gcc api-example-9.c -o api-example-9 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-math)
 ```
 
 Execute the example with:
@@ -1063,7 +1063,7 @@ To compile it one can use the following command:
 (**Note** that the `libjerry-ext` was added **before** the `libjerry-port-default` entry for the `pkg-config` call.
 
 ```sh
-$ gcc api-example-10.c -o api-example-10 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-libm)
+$ gcc api-example-10.c -o api-example-10 $(pkg-config --cflags --libs libjerry-core libjerry-ext libjerry-port-default libjerry-math)
 ```
 
 Execute the example with:
